<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/bone">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView6"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@drawable/ic_books"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="@drawable/ic_books"
            android:contentDescription="@string/book"
            android:onClick="ClickMain"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_books" />

        <ImageView
            android:id="@+id/imageView8"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@drawable/ic_gear"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginEnd="17dp"
            android:background="@drawable/ic_gear"
            android:contentDescription="@string/settings"
            android:onClick="ClickSettings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_gear" />

        <ImageView
            android:id="@+id/imageView9"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@drawable/ic_newroundnotext"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/ic_newroundnotext"
            android:contentDescription="@string/about_as"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_newroundnotext" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/databaseRecyclerFolders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>