<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bone">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="@drawable/ic_books"
            android:contentDescription="@string/book"
            android:onClick="ClickMain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_books"
            tools:srcCompat="@drawable/ic_books" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="@drawable/ic_gear"
            android:contentDescription="@string/settings"
            android:onClick="ClickSettings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.851"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_gear"
            tools:srcCompat="@drawable/ic_gear" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="@drawable/ic_newroundnotext"
            android:contentDescription="@string/profile"
            android:onClick="ClickProfile"
            app:layout_constraintEnd_toStartOf="@+id/imageView7"
            app:layout_constraintHorizontal_bias="0.148"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_newroundnotext"
            tools:srcCompat="@drawable/ic_newroundnotext" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/bookTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/book"
        android:text="Название книги"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout3" />

    <TextView
        android:id="@+id/bookDescription"
        android:layout_width="match_parent"
        android:layout_height="311dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:text="Описание"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookAuthor" />

    <Button
        android:id="@+id/button"
        android:layout_width="376dp"
        android:layout_height="49dp"
        android:layout_marginBottom="20dp"
        android:background="@color/purple_200"
        android:onClick="ClickRead"
        android:text="Читать"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:backgroundTint="@color/purple_200"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/bookAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Автор"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookTitle" />

    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/bookImage"
            android:layout_width="2dp"
            android:layout_height="2dp"
            android:contentDescription="@string/Picture"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
            app:srcCompat="@drawable/ic_mm"
            tools:srcCompat="@drawable/ic_mm" />
        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_books"
            android:contentDescription="@string/book"
            app:srcCompat="@drawable/ic_books"
            tools:srcCompat="@drawable/ic_books" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>